stop job running by zeroing cron for update-jquery-validate.yml

--- a/.github/workflows/update-jquery-validate.yml
+++ b/.github/workflows/update-jquery-validate.yml
@@ -1,8 +1,8 @@
 name: Update jquery-validation
 
 on:
-  schedule:
-    - cron: '0 0 1 * *'  # Run on the first day of the month
+  # schedule:
+  #  - cron: '0 0 1 * *'  # Run on the first day of the month
   workflow_dispatch:  # Allow manual runs
 
 permissions:
